--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-gray-600 ">
+<body class="bg-gray-600 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-1">
  <header >
   <section class="ml-32 flex " >
     
     <div class="conteinar  mb-10  text-5xl">
-      <h1 class="text-green-500 text-5xl font-bold ">Real time clock</h1>
+      <h1 class="text-green-500 text-5xl font-bold ">Real Time Clock</h1>
       <span class="mr-4 text-green-500 " id="hours">00</span>
       <span class="mr-4 text-green-500">:</span>
       <span class="mr-4 text-green-500" id="minute">00</span>
@@ -23,15 +23,15 @@
       <span class="mr-4 text-green-500" id="seconds">00</span>
       <span class="mr-4 text-green-500" id="sesson">PM</span>
     </div>
-    <div class="ml-96 mb-10  text-5xl text-center">
-      <h1 class="text-green-500 text-5xl font-bold ">Time left</h1>
+    <div class="ml-96 mb-10  text-5xl text-center grid grid-cols-1 sm:grid-cols-1 md:grid-cols-1">
+      <h1 class="text-green-500 text-5xl font-bold ">Time Left</h1>
       <p  id="demo" class="text-green-500" ></p>
     </div>
   </section>
    <section class="text-center"> 
-    <h1 class="text-green-500 text-5xl font-bold">Romzan calender </h1>
+    <h1 class="text-green-500 text-5xl font-bold">Romzan Calender </h1>
     <h1 class="text-green-500 text-4xl font-bold my-4">2023</h1>
-    <h2 class="text-green-500 text-3xl font-bold my-4">Hijri 1444 - Bangladesh (dhake)</h2>
+    <h2 class="text-green-500 text-3xl font-bold my-4">Hijri 1444 - Bangladesh (Dhaka)</h2>
    </section>
  </header>
  <main class="shadow-inner">
